added firebase config and modified gitignore

--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,14 @@
       });
     });
   </script>
+  <script type="module">
+  // Your web app's Firebase configuration
+  import { firebaseConfig } from './firebase-config.js';
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-analytics.js";
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </body>
 </html>
